# corosync

./: ChangeLog  Makefile.in  aclocal.m4  configure  configure.ac
common_lib/: Makefile.in
conf/: Makefile.in
conf/logrotate/: Makefile.in
cts/: Makefile.in
cts/agents/: Makefile.in
debian/: changelog  control  copyright  corosync-doc.doc-base  corosync-doc.install  corosync-doc.lintian-overrides  corosync-notifyd.default  corosync-notifyd.init  corosync-notifyd.install  corosync.conf  corosync.corosync-notifyd.init  corosync.default  corosync.dirs  corosync.docs  corosync.example-config  corosync.init  corosync.install  corosync.logrotate  corosync.postinst  gbp.conf  libcfg6.symbols  libcmap-dev.install  libcmap4.symbols  libcorosync-common4.symbols  libcorosync-dev.install  libcorosync2.install  libcpg-dev.install  libcpg4.symbols  libquorum-dev.install  libquorum5.symbols  libsam-dev.install  libsam4.symbols  libtotem-pg-dev.install  libtotem-pg5.symbols  libvotequorum-dev.install  libvotequorum6.install  libvotequorum7.install  libvotequorum7.symbols  rules  watch
debian/patches/: 0001-add-missing-NAME-entry-for-whatis.patch  0002-Fix-incorrect-spelling-of-retrieve-from-retreive.patch  0002-fix-corodefs  0003-Add-section-in-manual-title-for-cpg_zcb_alloc-3.patch  0004-Add-section-in-manual-title-for-cpg_zcb_free-3.patch  0005-Fix-grammer-error-in-manual-votequorum_trackstart-3.patch  0006-Fix-spelling-errors-in-manual-corosync.conf-5.patch  000_trunk.dpatch  001_fixes.dpatch  (+48 more)
exec/: Makefile.in  service.h
include/: Makefile.in
init/: Makefile.am  Makefile.in  corosync-notifyd.conf.in  corosync-notifyd.in  corosync-notifyd.service.in  corosync-qdevice.in  corosync-qnetd.in  corosync-qnetd.service.in  corosync.conf.in  corosync.in
lcr/: Makefile.in
lib/: Makefile.in
man/: Makefile.in  corosync-blackbox.8
pkgconfig/: Makefile.am  Makefile.in  corosync.pc.in  libtemplate.pc.in
qdevices/: Makefile.in
services/: Makefile.in
test/: Makefile.in
tools/: Makefile.am  Makefile.in  corosync-blackbox.sh  corosync-xmlproc.sh
(+2 files in other folders)
